# memo-architect

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pdm-python  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  syside.toml  tsconfig.architect.json
.github/workflows/: docs.yml
docs/: README.md
docs/architecture/: README.md  platform.md
docs/architecture/reference/: diagram-renderers.md  monorepo.md  overview.md  platform-strategy.md  repository-layout.md  standalone-distribution.md
docs/decisions/: index.md
docs/decisions/adr/: ADR-1-11-single-canonical-ontology.md  ADR-1-12-namespace-canonicalization.md  ADR-1-13-sysml-library-import-wrapper.md  ADR-1-14-extension-package-policy.md  ADR-1-15-methodology-scope-explicit-lists.md  ADR-1-16-view-presentation-syntax-fallbacks.md  ADR-1-17-three-repo-split.md  ADR-1-18-kerml-expression-subset.md  ADR-1-19-geometry-view-deferred.md  ADR-1-20-maxgraph-diagram-renderer.md  ADR-1-21-modular-capability-provider-architecture.md  ADR-1-22-npm-dependencies-meta-workspace.md  ADR-1-8-project-format-contract.md  ADR-1-9-ontology-restart-required.md
docs/design/: README.md  constraint-evaluator.md  diagram-rendering-benchmarks.md  ontology-portability.md  syside-configuration.md  sysmlv2-rulebook.md
docs/design/runtime/: data-flow.md  live-reload.md  websocket-protocol.md
docs/likec4/: README.md  model.c4
docs/src/: index.md
scripts/: check-no-ontology-cache.sh  pack-standalone.sh  run-gpca-example.mjs
src/commands/: build.ts  dev.ts
(+31 files in other folders)
