[project]
name = "memo-docs"
version = "0.4.4"
description = "MEMO MBSE documentation"
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

[tool.pdm.scripts]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
